Fixed blocked content when jump to in-page anchor

--- a/single-page-portfolio/src/components/About.css
+++ b/single-page-portfolio/src/components/About.css
@@ -1,4 +1,3 @@
 .about-container {
     height: 1000px;
-    margin-top: 100px;
 }
