--- a/single-page-portfolio/src/components/Navbar.css
+++ b/single-page-portfolio/src/components/Navbar.css
@@ -1,3 +1,7 @@
+:target {
+    padding-top: 80px;
+}
+
 .nav-bar {
     height: 100px;
     background-color: black;
